Package: startup
================

Version: 0.9.0-9000 [2018-03-05]

NEW FEATURES:

 * Added is_debug_on() which returns TRUE if the startup debug mode is on.
   To control the debug mode, see ?startup::startup.

 * Added flag 'microsoftr' to sysinfo() indicating whether R runs in
   Microsoft R Open or not.

 * Added flag 'rstudioterm' to sysinfo() indicating whether R runs in an
   RStudio Terminal or not.  To test whether R runs via the RStudio Console,
   use 'rstudio'.

 * restart() gained argument 'quiet' for controlling whether the restart
   should be quiet or not.

 * startup(debug = TRUE) reports on several R_* environment variables.
   
 * Added customizable field 'secrets' to sysinfo() which takes any non-empty
   value of environment variable 'R_STARTUP_SECRETS' if set, otherwise "FALSE".
   This can be used to filter out sensitive .Renviron.d/ files by default such
   that they are only included if 'R_STARTUP_SECRETS' takes a matching value,
   e.g. files under .Renviron.d/secrets=banana/ will only be included if
   Sys.getenv("R_STARTUP_SECRETS") == "banana".

BUG FIX:

 * startup::restart() would not work in the RStudio Terminal.  Note that it
   does not work in the RStudio Console due to limitations in RStudio.
 

Version: 0.9.0 [2018-01-09]

NEW FEATURES:

 * Added restart() for restarting the current R session.  It can also be used
   to adjust various R command-line arguments and environment variables, e.g.
   restart(as = "R CMD build") mimics the 'R CMD build' setup as far as
   possible.


Version: 0.8.0 [2017-10-18]

NEW FEATURES:

 * Added startup::current_script() which returns the .Rprofile.d/ pathname
   that is currently processed by startup::startup().
   
 * Added flag 'rice' to sysinfo() indicating whether R runs via Rice or not,
   meaning it can be used as a file and directory name tag, e.g. rice=TRUE.
 
 * startup(debug = TRUE) outputs much more information on what has taken place