@@ -1,0 +1,14 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/is_microsoftr.R
+\name{is_microsoftr}
+\alias{is_microsoftr}
+\title{Checks if running R in Microsoft R Open}
+\usage{
+is_microsoftr()
+}
+\value{
+A logical
+}
+\description{
+Checks if running R in Microsoft R Open
+}
