@@ -87,7 +87,7 @@ The following `startup::sysinfo()` keys are available for conditional inclusion 
 * System flags:
   - `interactive` - (logical) whether running R interactively or not (= `interactive()`)
   - `ess`         - (logical) whether running R in [Emacs Speaks Statistics (ESS)] or not
-  - `rice`        - (logical) whether running R in [rice] or not
+  - `rtichoke`    - (logical) whether running R in [rtichoke] (formerly known as 'rice') or not
   - `microsoftr`  - (logical) whether running R in [Microsoft R Open] or not
   - `rstudio`     - (logical) whether running R in [RStudio] Console or not
   - `rstudioterm` - (logical) whether running R in [RStudio] Terminal or not
@@ -184,6 +184,6 @@ local({
 [startup]: https://cran.r-project.org/package=startup
 [Emacs Speaks Statistics (ESS)]: https://ess.r-project.org/
 [Microsoft R Open]: https://mran.microsoft.com/open
-[rice]: https://github.com/randy3k/rice
+[rtichoke]: https://github.com/randy3k/rtichoke
 [RStudio]: https://www.rstudio.com/products/RStudio/
 [Linux Wine]: https://www.winehq.org/
